syntax = "proto3";

package user;

// --- Mensajes de entrada/salida ---

message UserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  string message = 1;
  string id = 2;
}

message ValidateUserRequest {
  string userId = 1;
}

message ValidateUserResponse {
  bool exists = 1;
}

message Empty {}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UserList {
  repeated User usuarios = 1;
}

// --- Servicio Ãºnico consolidado ---

service UserService {
  rpc CreateUser(UserRequest) returns (UserResponse);
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
  rpc GetAllUsers(Empty) returns (UserList);
}
